# ControlWebcamOpenCV

./: CMakeLists.txt  README.md  blue_color.txt  build_opencv4
src/header/: Blob.hh  Frame.hh  ImageAdditionner.hh  ImageProcesser.hh  ImageProvider.hh  Palette.hh  ScalarColor.hpp  WebcamController.hh
src/source/: Blob.cpp  Frame.cpp  ImageAdditionner.cpp  ImageProcesser.cpp  ImageProvider.cpp  Main.cpp  Palette.cpp  WebcamController.cpp
